# lab5_ipr

./: README.md
lab4ci/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
lab4ci/docs/: api.md
lab4ci/k8s/: deployment.yaml  hpa.yaml  ingress.yaml
lab4ci/src/: data_backup.json  manage.py
lab4ci/src/Sales_Aggregator/: asgi.py  settings.py  urls.py  wsgi.py
lab4ci/src/discounts/: admin.py  forms.py  models.py  urls.py  views.py
lab4ci/src/discounts/migrations/: 0001_initial.py  0002_remove_category_created_at.py
lab4ci/src/discounts/templates/discounts/: base.html  create_post.html  favorites.html  home.html  user_posts.html
lab4ci/src/users/: forms.py  models.py  urls.py  views.py
lab4ci/src/users/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py  0003_alter_customuser_options_customuser_created_at.py
lab4ci/src/users/templates/users/: login.html  register.html
lab4ci/tests/: test_discounts.py  test_users.py
