[project]
name = "sales-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "django>=5.2.8",
    "psycopg>=3.2.12",
    "python-dotenv>=1.2.1",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 79
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B', 'Q']
fixable = ['ALL']
ignore = ['E101', 'E501']

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.mypy]
python_version = '3.12'
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
